fix width on mobile

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -461,7 +461,7 @@ body {
   font-family: "Bitter", serif;
   max-width: 800px;
   margin: 2rem auto;
-  width: 100%;
+  width: 90vw;
   padding: 1rem;
 }
 
